--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "node-localstorage": "^1.3.0"
   },
   "devDependencies": {
+    "@types/es6-promise": "0.0.33",
     "async": "^2.0.1",
     "babel-preset-es2015": "^6.13.2",
-    "tape": "^4.6.0",
+    "tape": "^4.8.0",
     "tslint": "^3.14.0",
     "tslint-config-typings": "^0.2.3",
     "tslint-config-unional": "^0.4.4",
